<resources>
    <string name="app_name">Photographer</string>
    <string name="title_text">Photographer - Sign Up</string>
    <string name="hint_enter">Enter here</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="text_ssn">SSN (Last 4 digits)</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="background_check">Will you pass Background Check</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_enter_info">Please enter all information to sign up !</string>
    <string name="ssn_least_4">SSN at least 4 digits</string>
    <string name="phone_least_10">Phone number must be 10 digits</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="confirm_pass_dont_match">The confirm password must match the password!</string>
    <string name="rationale_camera">This app needs access to your camera so you can take a photo!</string>
    <string name="rationale_external_storage">This app needs access to your camera so you can select a photo from your library!</string>
    <string name="please_choose_background_check">Please choose Yes/No for background check!</string>

    <string name="error400">Bad Request</string>
    <string name="error401">Unauthorized</string>
    <string name="error404">Data Not Found</string>
    <string name="error415">Unsupported media type</string>
    <string name="error500">Internal Server Error</string>
    <string name="no_internet">Please check your internet connection or try again later!</string>
    <string name="error409">Conflict: Infomation has been used !</string>
</resources>
