<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context="com.kan_tek.photographersignup.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/image_profile"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_profile_default"
            app:civ_border_color="@color/colorAccent"
            app:civ_border_width="2dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_10dp"
        android:paddingRight="@dimen/padding_10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:text="@string/first_name"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_14sp" />

        <EditText
            android:id="@+id/edtFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.8"
            android:background="@color/colorTransparency"
            android:hint="@string/hint_enter"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorGrey2"
            android:textSize="@dimen/text_size_14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGrey1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_10dp"
        android:paddingRight="@dimen/padding_10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:text="@string/last_name"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_14sp" />

        <EditText
            android:id="@+id/edtLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.8"
            android:background="@color/colorTransparency"
            android:hint="@string/hint_enter"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorGrey2"
            android:textSize="@dimen/text_size_14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGrey1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_10dp"
        android:paddingRight="@dimen/padding_10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:text="@string/phone_number"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_14sp" />

        <EditText
            android:id="@+id/edtPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.8"
            android:background="@color/colorTransparency"
            android:hint="@string/hint_enter"
            android:inputType="phone"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorGrey2"
            android:textSize="@dimen/text_size_14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGrey1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_10dp"
        android:paddingRight="@dimen/padding_10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:text="@string/email"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_14sp" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.8"
            android:background="@color/colorTransparency"
            android:hint="@string/hint_enter"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorGrey2"
            android:textSize="@dimen/text_size_14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGrey1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_10dp"
        android:paddingRight="@dimen/padding_10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.2"
            android:drawableRight="@drawable/ic_calendar_white"
            android:gravity="center|left"
            android:paddingRight="20dp"
            android:text="@string/birthday"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_14sp" />

        <EditText
            android:id="@+id/edtBirthday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.8"
            android:background="@color/colorTransparency"
            android:hint="@string/hint_enter"
            android:inputType="datetime"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorGrey2"
            android:textSize="@dimen/text_size_14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGrey1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_10dp"
        android:paddingRight="@dimen/padding_10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:text="@string/text_ssn"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_14sp" />

        <EditText
            android:id="@+id/edtSSN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.8"
            android:background="@color/colorTransparency"
            android:hint="@string/hint_enter"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorGrey2"
            android:textSize="@dimen/text_size_14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGrey1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_10dp"
        android:paddingRight="@dimen/padding_10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:text="@string/password"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_14sp" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.8"
            android:background="@color/colorTransparency"
            android:fontFamily="sans-serif"
            android:hint="@string/hint_enter"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorGrey2"
            android:textSize="@dimen/text_size_14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGrey1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_10dp"
        android:paddingRight="@dimen/padding_10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:text="@string/confirm_pass"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_14sp" />

        <EditText
            android:id="@+id/edtConfirmPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.8"
            android:background="@color/colorTransparency"
            android:fontFamily="sans-serif"
            android:hint="@string/hint_enter"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorGrey2"
            android:textSize="@dimen/text_size_14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGrey1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_10dp"
        android:paddingRight="@dimen/padding_10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/background_check"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left">

            <CheckBox
                android:id="@+id/chkYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorWhite"
                android:text="@string/yes"
                android:textColor="@color/colorWhite" />

            <CheckBox
                android:id="@+id/chkNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorWhite"
                android:text="@string/no"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5">

        <Button
            android:id="@+id/btnAccept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg_button"
            android:padding="@dimen/padding_5dp"
            android:text="accept"
            android:textColor="@color/colorWhite" />

    </RelativeLayout>

</LinearLayout>
